@@ -1,47 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<?page title="Multiline Messagebox" language="xul/html"?>
-<window width="450px" closable="false"
-	use="org.zkoss.zul.impl.MessageboxDlg">
-	<panel title="${arg.title}" border="normal">
-		<panelchildren>
-			<hbox style="padding: 8px;">
-				<div class="${arg.icon}" />
-				<div sclass="z-messagebox"
-					style="padding: 0px 0px 0px 8px;">
-					<label multiline="true" value="${arg.message}"
-						sclass="word-wrap" />
-				</div>
-			</hbox>
-			<separator bar="true" />
-			<hbox width="100%" pack="center"
-				style="padding: 4px 0px 8px;">
-				<button id="btn1" identity="${arg.OK}"
-					sclass="z-messagebox-btn"
-					use="org.zkoss.zul.impl.MessageboxDlg$Button" if="${!empty arg.OK}"
-					style="margin: 0px 4px;" />
-				<button identity="${arg.CANCEL}"
-					sclass="z-messagebox-btn"
-					use="org.zkoss.zul.impl.MessageboxDlg$Button"
-					if="${!empty arg.CANCEL}" style="margin: 0px 4px;" />
-				<button identity="${arg.YES}" sclass="z-messagebox-btn"
-					use="org.zkoss.zul.impl.MessageboxDlg$Button"
-					if="${!empty arg.YES}" style="margin: 0px 4px;" />
-				<button identity="${arg.NO}" sclass="z-messagebox-btn"
-					use="org.zkoss.zul.impl.MessageboxDlg$Button" if="${!empty arg.NO}"
-					style="margin: 0px 4px;" />
-				<button identity="${arg.RETRY}"
-					sclass="z-messagebox-btn"
-					use="org.zkoss.zul.impl.MessageboxDlg$Button"
-					if="${!empty arg.RETRY}" style="margin: 0px 4px;" />
-				<button identity="${arg.ABORT}"
-					sclass="z-messagebox-btn"
-					use="org.zkoss.zul.impl.MessageboxDlg$Button"
-					if="${!empty arg.ABORT}" style="margin: 0px 4px;" />
-				<button identity="${arg.IGNORE}" label="Overide"
-					sclass="z-messagebox-btn"
-					use="org.zkoss.zul.impl.MessageboxDlg$Button"
-					if="${!empty arg.IGNORE}" style="margin: 0px 4px;" />
-			</hbox>
-		</panelchildren>
-	</panel>
-</window>
