@@ -1,3 +1,8 @@
+pff 4.7.14, 2018-03-05
+----------------------
+- Upgraded pennapps-web version from 0.4.3 to 0.5, to use framework UserWorksapce.
+- Refer the framework zul files from pennapps-web.jar directly. 
+
 pff 4.7.14, 2018-02-22
 ----------------------
 - Moved GlobalVariable.java from com.pennant.backend.model to com.pennanttech.pennapps.core.model package
